UV Editor translation ignores "Pixel Coordinates" and aspect ratio #83801

Closed
opened 2020-12-15 15:52:10 +01:00 by Elemes Medve · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: 2.80.53

Caused by 4eda60c2d8

Short description of error
Moving a selection in the UV Editor doesn't respect the "Pixel Coordinates" toggle. When entering a value it's always interpreted in texture coordinate space.

Exact steps for others to reproduce the error
Create new file (general with the cube).
Switch to the UV Editing workspace.
Open sidebar with 'N'.
Select "View".
Check "Pixel Coordinates".
Select all with "A".
Move selection with "G".
Enter "1".
Observe the selection moving outside the grid.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: 2.80.53 Caused by 4eda60c2d8 **Short description of error** Moving a selection in the UV Editor doesn't respect the "Pixel Coordinates" toggle. When entering a value it's always interpreted in texture coordinate space. **Exact steps for others to reproduce the error** Create new file (general with the cube). Switch to the UV Editing workspace. Open sidebar with 'N'. Select "View". Check "Pixel Coordinates". Select all with "A". Move selection with "G". Enter "1". Observe the selection moving outside the grid.
Author

Added subscriber: @elemesmedve

Added subscriber: @elemesmedve
Philipp Oeser self-assigned this 2020-12-15 21:23:55 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 37d450b518

This issue was referenced by 37d450b518f593b0c5b6a634adbf565397d621de

This issue was referenced by 8d590e4b86

This issue was referenced by 8d590e4b86287be22567d1adf8c6a7946bc7f63d
Philipp Oeser changed title from Movement doesn't respect "Pixel Coordinates" toggle in UV Editor. to UV Editor translation ignores "Pixel Coordinates" and aspect ratio 2020-12-16 11:41:54 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83801
No description provided.